<resources>
    <string name="app_name">Farmers Assistant System</string>
    <string name="seller_button">বিক্রেতা</string>
    <string name="customer_button">ক্রেতা</string>
    <string name="agriculture_button">কৃষি তথ্য</string>
    <string name="agriculture1_button">ধান চাষ বিষয়ক তথ্য</string>
    <string name="agriculture2_button">আলু চাষাবাদ</string>
    <string name="agriculture3_button">শাক-সবজি চাষ</string>
    <string name="agriculture4_button">ফুল চাষ</string>
    <string name="agriculture5_button">সার বিষয়ক তথ্য </string>
    <string name="agriculture6_button">কৃষি সম্প্রসারণে আমাদের করণীয়</string>
    <string name="agriculturein_button">কৃষি সম্প্রসারণে আমাদের করণীয়:</string>
    <string name="agrinfo_button">
        প্রতিনিয়তই আমাদের দেশের আবাদযোগ্য জমির পরিমাণ কমে যাচ্ছে। বর্ধিত জনসংখ্যার বাসস্থানের প্রয়োজনেই মূলতঃ কৃষি জমির পরিমাণ কমলেও বাড়ছে মানুষের খাদ্যের চাহিদা। ফলে ব্যাপক জনগোষ্ঠির জন্য প্রয়োজনীয় খাদ্যের চাহিদা বর্তমান আবাদযোগ্য জমি থেকে প্রাপ্ত ফলন দ্বারা মেটানো সম্ভব হচ্ছে না। প্রথমতঃ কৃষি জমির পরিমাণ হ্রাস পাচ্ছে এবং দ্বিতীয়তঃ সম্পদের সঠিক ও সর্বোত্তম ব্যবহার নিশ্চিত হচ্ছে না বিধায় কৃষকের আয় বাড়ছে না। ফলশ্রুতিতে কৃষি প্রধান আমাদের এই দেশের মোট জনসংখ্যার অধিকাংশই খাদ্যের নিরাপত্তাহীনতায় ভুগছে এবং অর্থনৈতিক ও সামাজিকভাবে দূরাবস্থায় জীবন-যাপন করছে। এমতাবস্থায় কৃষি জমি ও সম্পদের সঠিক ও সর্বোচ্চ ব্যবহার নিশ্চিত করা অতীব গুরুত্বপূর্ণ।বাংলাদেশ কৃষি নির্ভর দেশ। অথচ আমরা দিন দিন কৃষি থেকে দুরে সরে যাচ্ছি, শিল্প নির্ভর সংস্কৃতির সাথে তাল মিলানোর আপ্রান চেষ্টা আমাদের। কিন্তু প্রতি বছরই খাদ্য ঘাটতি আমাদের কে মনে করিয়ে দেয় কৃষির প্রয়োজনীয়তার কথা। তাই কৃষি কে আর কৃষকের মধ্যে সীমাবদ্ব রাখার কোন অবকাশ নেই। আজ কৃষি একটা শিল্প আর এ শিল্পে অংশগ্রহন করার সুয়োগ রয়েছে দেশের প্রতিটি মানুষের। তাই আসুন আমরা প্রত্যেকে কৃষিতে কিছু না কিছু অবদান রাখি। বাড়ির ছাদ , ঘরের বারান্দা, সামনের উঠোন অথবা কোন ফসলি জমি যে খানেই সম্ভব গড়ে তুলি ছোট্ট একটি কৃষি খামার আর অবদান রাখি সামান্যতম হলে ও দেশের খাদ্য ঘাটতি মোচনে। ভাবছেন করবেন কিন্তু কি ভাবে ? প্রয়োজনীয় তথ্য যে আপনার হাতে নেই। এ কথা সত্য অনেকের মধ্যে অপরিসীম আগ্রহ থাকা সত্বেও শুধুমাত্র প্রয়োজনীয় তথ্যের অভাবে নিজের পরিকল্পনা থেকে পিছিয়ে আসেন। বঞ্চিত হন সবুজ-শ্যামলের হাতছানি থেকে। তাই আপনাকে একধাপ এগিয়ে দিতে প্রয়োজনীয় সকল তথ্য নিয়ে আপনার পাশে আছি আমরা। সন্নিবেশিত তথ্যসমূহ ছাড়াও আপনি আরো কি ধরনের তথ্য চান তা যদি অনুগ্রহ করে আমাদের কে জানান তাহলে আপনি এবং সকল ইন্টারনেট ব্যাবহারকরী উপকৃত হবে। আপনার মতামত জানিয়ে আমাদের কে ই-মেইল করতে পারেন।
       \n\n
    </string>
    <string name="agriculture11_button">আধুনিক বোরো ধানের চাষ:</string>
    <string name="agriculturedhan_button">হাওর বা বাঁওড় শব্দ থেকে বোরো শব্দের উৎপত্তি। বোরো ধানগুলো এককালে আমাদের দেশে হাওর ও বাঁওড় এলাকায় চাষ হতো। বর্তমানে সেচের বিস্তার হওয়ায় অন্যান্য উঁচু জমিতেও এর চাষ হচ্ছে। বোরো মওসুমে ধানগাছ প্রচুর সূর্যকিরণ পায়, সার বেশি গ্রহণ করে অথচ গাছ ও পাতা হেলে পড়ে না, ফলবান কুশি বেশি হয় এবং অধিক ফলন পাওয়া যায়। তাই এ মওসুমে আধুনিক জাতের বোরো ধানের চাষ সম্প্রসারণ করা প্রয়োজন। বোরো ধানের ভালো ফলন পেতে হলে জমি তৈরি, সুষম মাত্রায় জৈব ও রাসায়নিক সার ব্যবহার এবং সময়মতো চারা রোপণ করে অন্যান্য পরিচর্যা সঠিকভাবে করতে হবে।\n\nজমি তৈরি:\nধানের চারা রোপণের জন্য জমি কাদাময় করে উত্তমরূপে তৈরি করতে হবে। এ জন্য জমিতে প্রয়োজনমতো পানি দিয়ে মাটি একটু নরম হলে ১০-১৫ সেন্টিমিটার গভীর করে সোজাসুজি ও আড়াআড়িভাবে চার-পাঁচটি চাষ ও মই দিতে হবে যেন মাটি থকথকে কাদাময় হয়। প্রথম চাষের পর অন্তত সাত দিন জমিতে পানি আটকে রাখা প্রয়োজন। এর ফলে জমির আগাছা, খড় ইত্যাদি পচনের ফলে গাছের খাদ্য বিশেষ করে অ্যামোনিয়াম নাইট্রোজেন জমিতে বৃদ্ধি পায়।\n\n মূল সার প্রয়োগ:\nবোরো মওসুমে ধানের আশানুরূপ ফলন পেতে জমিতে পরিমাণমতো জৈব ও রাসায়নিক সার ব্যবহার করা দরকার। সারণিতে বোরো ধানের জাতভিত্তিক সারের মাত্রা (ইউরিয়া ছাড়া) উল্লেখ করা হলো।জাতভেদে বোরো ধানের সারের পরিমাণ (কেজি/হেক্টরে)\n\nচারা রোপণ:\nবীজতলা থেকে ৩০-৩৫ দিন বয়সের চারা সাবধানে তুলে এনে সারি করে রোপণ করতে হবে। এ মওসুমে সারি থেকে সারি ২০-২৫ সেন্টিমিটার এবং চারা থেকে চারা ১৫-২০ সেন্টিমিটার দূরত্বে লাগাতে হবে। জমির উর্বরতা ও জাতের কুশি ছাড়ানোর ওপর ভিত্তি করে এ দূরত্ব কম বা বেশি হতে পারে। প্রতি গোছায় দু-তিনটি সুস্থ ও সবল চারা ২.৫-৩.৫ সেন্টিমিটার গভীরে রোপণ করতে হবে। খুব গভীরে চারা রোপণ করা ঠিক নয়। এতে কুশি গজাতে দেরি হয়। কুশি ও ছড়া কম হয়। কম গভীরে রোপণ করলে তাড়াতাড়ি কুশি গজায়, কুশি ও ছড়া বেশি হয় ও ফলন বাড়ে। তাই কম গভীরে চারা রোপণের জন্য রোপণের সময় জমিতে ১.২৫ সেন্টিমিটারের মতো ছিপছিপে পানি রাখা ভালো। কাদাময় অবস্থায় রোপণের গভীরতা ঠিক রাখার সুবিধা হয়। রোপণের পর জমির এক কোনায় কিছু বাড়তি চারা রেখে দিতে হয়। এতে রোপণের ১০-১৫ দিন পরে যেসব জায়গায় চারা মরে যায় সেখানে বাড়তি চারা থেকে শূন্যস্থান পূরণ করা যায়। ফলে জমিতে একই বয়সের চারা রোপণ করা হয়।
        \n\n সেচব্যবস্থা: \n গাছের প্রয়োজনমাফিক সেচ দিলে সেচের পানির পূর্ণ ব্যবহার হয়। বোরো ধানের জমিতে সব সময় পানি ধরে রাখতে হবে এমন কোনো নিয়ম নেই। বোরো মওসুমে সাধারণত ধানের সারা জীবনকালে মোট ১২০ সেন্টিমিটার পানির প্রয়োজন। তবে কাইচ থোড় আসার সময় থেকে ধানের দুধ হওয়া পর্যন্ত পানির চাহিদা দ্বিগুণ হয়। এ সময় জমিতে দাঁড়ানো পানি রাখতে হয়। কারণ থোড় ও ফুল অবস্থায় মাটিতে রস না থাকলে ফলন কমে যায়। রোপণের পর কোন অবস্থায় কতটুকু পানি দরকার তা নিম্নে দেয়া হলো।ধান কাটার ১০-১২ দিন আগে জমির পানি বের করে দিতে হবে। এ ছাড়া জমি শুকিয়ে নিতে হবে। এতে মাটিতে জমে থাকা দূষিত বাতাস বের হয়ে যাবে এবং চারাগুলো মাটির জৈব পদার্থ থেকে সহজে খাবার গ্রহণ করতে পারবে।
   \n\n </string>
    <string name="agriculture12_button">বোরো ধানের পরিচর্যা, রোগ নির্ণয় ও ফলন বাড়ানোর উপায়:</string>
</resources>