<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="5dp"
    android:background="#009688"
    tools:context=".AgricultureActivity">
<Button
    android:id="@+id/Ag1ButtonId"
    android:textAllCaps="false"
    android:textSize="20dp"
    android:textStyle="bold"
    android:text="@string/agriculture1_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
    <Button
    android:id="@+id/Ag2ButtonId"
    android:textAllCaps="false"
    android:textSize="20dp"
    android:textStyle="bold"
    android:text="@string/agriculture2_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/Ag3ButtonId"
    android:textAllCaps="false"
    android:textSize="20dp"
    android:textStyle="bold"
    android:text="@string/agriculture3_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
    <Button
    android:textAllCaps="false"
    android:textSize="20dp"
    android:textStyle="bold"
    android:text="@string/agriculture4_button"
        android:id="@+id/Ag4ButtonId"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/Ag5ButtonId"
    android:textAllCaps="false"
    android:textSize="20dp"
    android:textStyle="bold"
    android:text="@string/agriculture5_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/Ag6ButtonId"
    android:textAllCaps="false"
    android:textSize="20dp"
    android:textStyle="bold"
    android:text="@string/agriculture6_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
</LinearLayout>